--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ a:hover {
 }
 
 #mapstation {
-    display: none;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
