--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,18 @@ header {
 
 #menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+#menu_reservation {
+    display : none;
+}
+
+#menu_reservation, #menu_aide{
+    width: 150px;
+    font-size : 2vw;
 }
 
 header {
@@ -59,7 +68,8 @@ a:hover {
 }
 
 #slider {
-    background-color: rgba(227, 27, 27, 0.1)
+    background-color: rgba(227, 27, 27, 0.1);
+    display: none;
 }
 
 #cathedrale {
@@ -97,8 +107,9 @@ a:hover {
 #canvas {
     border: 1px solid #4f77f0;
     cursor: pointer;
-    margin: 10px;
-    width: 90%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
     height: 370px;
     background-color: #E0F1FE;
 }
