--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header {
     padding-top: 2%;
     text-align: right;
     cursor: pointer;
-    color:#e31b1b;
+    color: #e31b1b;
     font-size: 1.7vw;
 
 }
@@ -82,11 +82,6 @@ a:hover {
 #slider {
     background-color: rgba(227, 27, 27, 0.1);
     /* display: none; */
-}
-
-#cathedrale {
-    height: 100%;
-    width: 100%;
 }
 
 #map {
@@ -248,7 +243,6 @@ i:hover {
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    margin: 3%;
 }
 
 #slider_btn {
@@ -257,6 +251,7 @@ i:hover {
     justify-content: space-around;
     font-size: 1.8vw;
     margin-bottom: 2%;
+    margin-top: 5px;
     color: #4f77f0;
 }
 
@@ -272,7 +267,7 @@ i:hover {
 
 #slider_img {
     border: 3px solid #e5d80e;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -298,7 +293,7 @@ nav:hover {
     cursor: pointer;
 }
 
-#reservation{
+#reservation {
     text-align: center;
 }
 
